crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_errorhandling_recovery_19.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "foo"
                },
                "span": {
                  "start": 7,
                  "end": 10
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "ClassConstAccess": {
                        "class": {
                          "kind": {
                            "Identifier": "Bar"
                          },
                          "span": {
                            "start": 11,
                            "end": 14
                          }
                        },
                        "member": "<error>"
                      }
                    },
                    "span": {
                      "start": 11,
                      "end": 16
                    }
                  },
                  "unpack": false,
                  "span": {
                    "start": 11,
                    "end": 16
                  }
                }
              ]
            }
          },
          "span": {
            "start": 7,
            "end": 17
          }
        }
      },
      "span": {
        "start": 7,
        "end": 18
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 18
  }
}
